# assimp

./: CMakeLists.txt
tools/assimp_cmd/: CMakeLists.txt
tools/assimp_view/: CMakeLists.txt
